ros/servo controller/ros2_ws/log/build_2024-06-06_12-13-38/my_ax12_servo_controller/stderr.log
  File "/home/ubuntu/ros2_ws/install/my_ax12_servo_controller/lib/python3.10/site-packages/my_ax12_servo_controller/my_ax12_node.py", line 59
    elif value is not None && value2 is None:
                            ^
SyntaxError: invalid syntax

